# io-control

./: .gitignore  .pre-commit-config.yaml  gcc.py  justfile  pyproject.toml
iocontrol/: .gitignore  errors.py  fastapi.py  jsonschema.py  meta.py  pydantic.py  results.py  strings.py
iocontrol/api/: .gitignore  __init__.py  debug.py  main.py  requests.py  responses.py  static.py  urls.py
iocontrol/api/auth/: __init__.py  errors.py  main.py  roles.py  routes.py  users.py
iocontrol/api/config/: __init__.py  routes.py
iocontrol/api/system/: __init__.py  routes.py
iocontrol/api/tenants/: __init__.py  cells.py  clouds.py  provisioning.py  regions.py  router.py  tenants.py
iocontrol/aws/: lambda.py
iocontrol/cli/: __init__.py  console.py  coro.py  errors.py  main.py  results.py
iocontrol/cli/api/: __init__.py  export.py  group.py  start.py
iocontrol/cli/config/: __init__.py  create.py  group.py  show.py
iocontrol/config/: __init__.py  db.py  deploy.py  env.py  main.py  sqa.py  ui.py
iocontrol/config/api/: __init__.py  main.py
iocontrol/config/logging/: __init__.py  main.py
iocontrol/config/templates/: .gitignore  {{this}}.env
iocontrol/logging/: __init__.py  functions.py  levels.py  main.py  tags.py
iocontrol/logging/handlers/: __init__.py  structlog.py
iocontrol/sqa/: engine.py  errors.py  fastapi.py  models.py  pages.py  types.py
iocontrol/tenants/: models.py  orm.py  sqa.py
iocontrol/tenants/crud/: cells.py  clouds.py  regions.py  (+1 more)
mock/: .gitignore
scripts/api/: start.py
scripts/cli/: main.py
sphinx/source/: conf.py  index.rst
ui/: package-lock.json  package.json
ui/src/: App.js  index.js
(+61 files in other folders)
