[tool.poetry]
name = "iocontrol"
version = "0.0.1"
description = "IO Control Plane"
authors = ["IO Devs <devs@geocomm.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.5"
fastapi = "0.103.1"
semantic-version = "^2.10.0"
toml = "^0.10.2"
structlog = "^22.3.0"
rich = "^13.3.3"
uvicorn = "^0.21.1"
load-dotenv = "^0.1.0"
pendulum = "^2.1.2"
jinja2 = "^3.1.2"
mangum = "^0.17.0"
urllib3 = "<=2.0"
frontegg = "^2.1.6"
cachetools = "^5.3.1"
psycopg2-binary = "^2.9.6"
urlpath = "^1.2.0"
python-multipart = "^0.0.6"
autopep8 = "^2.0.2"
faker = "^19.3.1"
pyjwt = "^2.8.0"
random-word = "^1.0.11"
pydantic = "2.4.0"
pydantic-settings = "^2.0.3"
sqlalchemy = "^2.0.21"
geoalchemy2 = "^0.14.2"
geojson-pydantic = "^1.0.1"
shapely = "^2.0.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
pytest = "^7.2.2"
pre-commit = "^3.2.2"
pytest-coverage = "^0.0"
sphinx = "^6.1.3"
myst-parser = "^1.0.0"
sphinx-rtd-theme = "^1.2.0"
sphinxcontrib-apidoc = "^0.3.0"
sphinxcontrib-confluencebuilder = "^2.0.0"
vulture = "^2.7"
reorder-python-imports = "^3.10.0"
absolufy-imports = "^0.3.1"

[tool.poetry.scripts]
io-control = 'iocontrol.cli.main:main'
iocontrol = 'iocontrol.cli.main:main'
control = 'iocontrol.cli.main:main'

[tool.black]
line-length = 79

[tool.vulture]
exclude = []
ignore_decorators = []
ignore_names = []
make_whitelist = true
min_confidence = 100
paths = ["iocontrol"]
sort_by_size = true
verbose = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
